# fhnw-fprog

./: README.md
02-types/: AS_Types.lhs  WS_Tuples.lhs
03-lists/: PicturesASCII.hs  WS_Lists_as_Models.lhs
03-lists/list-functions/: Database  Main.hs  list-functions.cabal
03-lists/list-functions/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
04-functions/: AS_Functions.hs  AS_Matrizen.hs  WS_Bindings.hs  WS_ConditionalBranching.hs  WS_PatternMatching.hs
05-functionsII/: WS_LambdaExpressions.hs
06-recursion/: WS_Recursion.hs  WS_Recursion2.hs
07-datatypes/: AS_ArithmeticExpressions.lhs  WS_HandlingFailure.hs  WS_Shapes.lhs
08-io/WS_MiniCalc/: WS_MiniCalc.hi  WS_MiniCalc.hs
08-io/WS_Webclient/: Main.hs  WS-Webclient.cabal
08-io/WS_Webclient/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
09-typeclasses/: AS_JSON.lhs  WS_MovableShapes.lhs
12-hof/: AS_Folds.lhs  folds.lhs  ws-hof.hs
en1/: AllTests.hs  README.md
en1/A1/: Exercise1.hs  Test1.hs
en1/A2/: Exercise2.hs  Test2.hs
en1/A3/: Exercise3.hs  Test3.hs
en1/A4/: Exercise4.hs  Test4.hs
en1/A5/: Exercise5.hs  Test5.hs
en1/A6/: Exercise6.hs  Test6.hs
en1/Lib/: FprogTest.hs
helium/: README.md  helium.cabal
helium/.devcontainer/: Dockerfile  devcontainer.json
helium/app/: Main.hs
helium/demo-ideas/: Conpr  FHNW  Fprog  Haskell
helium/lib/He/: File.hs  Html.hs  Template.hs  Web.hs
helium/static/: graph.html  mockup.html  styles.css
helium/test/: HeliumTest.hs  SelfAssessment.hs
intro/: first.hs
intro/assignment/: PicturesSVG.hs
prereq/: README.md  prereq.cabal
prereq/app/: Main.hs
prereq/data/: README.md
prereq/lib/: Prereq.hs  Web.hs
prereq/static/: index.html  styles.css
prereq/test/: PrereqTest.hs
types/: AS_Types.lhs  WS_Tuples.lhs
