cabal-version:       3.0
name:                prereq
version:             0.1.0.0
author:              Daniel Kroeni
maintainer:          daniel.kroeni@fhnw.ch
build-type:          Simple

common common-properties
  default-language: Haskell2010
  build-depends:
    base ==4.17.2.1
   ,scotty ==0.22
   ,wai-extra
   ,directory
   ,transformers
   ,text
  ghc-options:
    -Wall

library
  import: common-properties
  exposed-modules:     Prereq, Web
  -- other-modules:
  -- other-extensions:
  build-depends:       
  hs-source-dirs:      lib

executable prereq
  import: common-properties
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       prereq
  hs-source-dirs:      app
  ghc-options: -threaded -rtsopts 

test-suite prereq-test
  import: common-properties
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             PrereqTest.hs
  build-depends:       tasty >= 1.5
                     , tasty-hunit 
                     , prereq

