cabal-version:       3.0
name:                WS-Webclient
version:             0.1.0.0
author:              Daniel Kröni
build-type:          Simple

executable webclient
  main-is:             Main.hs
  build-depends:       base ^>=4.17.0.0
                      ,http-client-tls
                      ,http-client
                      ,bytestring
  default-language:    Haskell2010
